k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akowe
  namespace: wackops
  labels:
    app: akowe
spec:
  selector:
    app: akowe
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  type: ClusterIP
